--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>LeeCode</artifactId>
+    <artifactId>LeetCode</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>LeeCode</name>
     <description>LeeCode</description>
@@ -37,7 +37,11 @@
             <version>2.15.2</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.14</version>
+        </dependency>
 
 
     </dependencies>
